Work done for cross-validation in knn

--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -460,7 +460,11 @@
     "# y_train_folds[i] is the label vector for the points in X_train_folds[i].     #\n",
     "# Hint: Look up the numpy array_split function.                                #\n",
     "################################################################################\n",
-    "pass\n",
+    "l = X_train.shape[0]\n",
+    "k = num_folds\n",
+    "X_train_folds = np.array_split(X_train, (np.arange(k+1) * (l)/k))[1:]\n",
+    "y_train_folds = np.array_split(y_train, (np.arange(k+1) * (l)/k))[1:]\n",
+    "\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             #\n",
     "################################################################################\n",
@@ -470,6 +474,30 @@
     "# k_to_accuracies[k] should be a list of length num_folds giving the different\n",
     "# accuracy values that we found when using that value of k.\n",
     "k_to_accuracies = {}\n",
+    "for k in k_choices:\n",
+    "    # Use the last fold as test data\n",
+    "    kx_test = X_train_folds[num_folds - 1]\n",
+    "    ky_test = y_train_folds[num_folds - 1]\n",
+    "    num_test = kx_test.shape[0]\n",
+    "    \n",
+    "    k_accuracy = 0.0\n",
+    "    for fold in range(num_folds - 1):\n",
+    "        kx_train = X_train_folds[fold]\n",
+    "        ky_train = y_train_folds[fold]\n",
+    "        \n",
+    "        classifier = KNearestNeighbor()\n",
+    "        classifier.train(kx_train, ky_train)\n",
+    "        dists = classifier.compute_distances_two_loops(kx_test)\n",
+    "        \n",
+    "        y_test_pred = classifier.predict_labels(dists, k=k)\n",
+    "        num_correct = np.sum(y_test_pred == ky_test)\n",
+    "        accuracy = float(num_correct) / num_test\n",
+    "        print 'For k = %d / fold = %d, got %d / %d correct => accuracy: %f' % (k, fold, num_correct, num_test, accuracy)\n",
+    "        k_accuracy += accuracy / (num_folds - 1)\n",
+    "        \n",
+    "    \n",
+    "    print \"Accuracy for k = %d was %f.\" % (k, k_accuracy)\n",
+    "    k_to_accuracies[k] = k_accuracy\n",
     "\n",
     "\n",
     "################################################################################\n",
