SVM gradient vectorized

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -416,11 +416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss: 9.134384e+00 computed in 0.074510s\n",
+      "Vectorized loss: 9.134384e+00 computed in 0.001734s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Next implement the function svm_loss_vectorized; for now only compute the loss;\n",
     "# we will implement the gradient in a moment.\n",
@@ -441,11 +451,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.073061s\n",
+      "4\n",
+      "[ 1.16836514  0.81711026  0.84908227  1.02120102  1.          1.16137736\n",
+      "  1.04732111  0.81954848  0.97113477  0.87587125]\n",
+      "(500, 10)\n",
+      "[ 1.  1.  1.  1. -9.  1.  1.  1.  1.  1.]\n",
+      "9.0\n",
+      "[ 1.  1.  1.  1. -9.  1.  1.  1.  1.  1.]\n",
+      "(500, 10)\n",
+      "(500, 3073)\n",
+      "(3073, 10)\n",
+      "Vectorized loss and gradient: computed in 0.006003s\n",
+      "difference: 1495856.570602\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
