--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -131,20 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 212,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 1 is out of bounds for axis 0 with size 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-37a7efbb873c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# training set.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_training\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_training\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnum_validation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mX_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 32, 32, 3)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 32, 32, 3)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 32, 32, 3)\n",
+      "Test labels shape:  (1000,)\n"
      ]
     }
    ],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +241,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD9CAYAAACcAsr/AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEnBJREFUeJzt3V+sXNV1x/HvD2ijElRKm2IqrrljFzV5aeVELVLqRBhw\nUtQXEA8RIQ9AqigPJUFCVYFILUoUtSEPSCgSL/wTQY2iKFIKkapgbGNjSKAo4GD+U+F7wQm+IBUl\nQpUiEq8+zLEz4Jk9c9fMOTN4/z6S5bnn3173zKx7Zs6avbciAjOry0nzDsDMuufEN6uQE9+sQk58\nswo58c0q5MQ3q9BUiS/pYkkvSHpJ0vWzCsrM2qVsHV/SScBLwEXAL4AngMsj4oXZhWdmbThlin3P\nA16OiFUASd8FLgHelfiS/A0hszmJCA1bPk3inw28NvDzIfp/DI7ztX//OgC7d+7iwu0XDYY1+uga\nGm9/VSEoFfYbtOvBXVz0qd/FMul+x7dXXDvRmp07drL909sn2a11Ox/Yyfa/2z5+Qyg+fVmDhzzu\nvLQQzKRveHft2MlFA7Fk3ymX9isecWC/3Tt3c+H2C8e29a83/svIdb65Z1ahaa74PwfOGfh5qVl2\nnN07dwFw8JWDHHzlFTZt3jxFs2Y2TD+/Dk607TSJ/wRwrqRl4HXgcuCzwzY8+vZ+kZJ+0+ZN8w7h\nmM1/vhjnBBzLKJsWKZYRr91Nmze9a92eXQ+NPEY68SPit5KuAXbQ/8hwZ0Q8X9pnUZIeFutFtVCx\nnLtAsSzSeVmgWGZx0Zrmik9E/Aj48ARbjtp/5B4q3OqI0t2v0k2X0k2z4Tc/p9wveffLdZCh0qel\nsGOkbwoWD5pZVY5lxq8J39wzq5AT36xCTnyzCjnxzSrkxDerkBPfrEJTlfMmNar0EXGksFMbZbLk\nMUvNlfoUlA7Zyvfxi3XH1Kr3i+yvkP7OffJ8lr+Pn2wv0bnDV3yzCjnxzSrkxDerkBPfrEJOfLMK\nOfHNKtRJOW9knSLdky61qtzjLzcKWLEuVyzZFX/1bK1v9qWpbiOZZsfsIbNDYWXbK+3n3nlm1iIn\nvlmFnPhmFXLim1XIiW9WISe+WYW6KeeNrJWVymvdlpiKlbcWevWVK4TJOmBRboDSrjvutdFeG2Wy\nfMmu2/1G8RXfrEJOfLMKOfHNKuTEN6uQE9+sQlPd1Ze0AvwSOAK8ExHnzSIoM2vXtOW8I8C2iHir\ntNHowTZzJbtsb6tWZEfNbKNil9VGey38fu2U+hbnmPlY1r/ntG/1NYNjmFnHpk3aAB6U9ISkL8wi\nIDNr37Rv9bdGxOuS/pT+H4DnI+KRWQRmZu2ZKvEj4vXm/zcl/QA4Dzgu8R/atefY496mHps296Zp\n1syGWDm4wsrB1Ym2TSe+pFOBkyLibUkfBD4NfHXYthdctC3bjJlNqLepR29T79jPex96eOS201zx\nNwA/kBTNcf4jInZMcTwz60g68SPiILBlwq1HHaSwx+xrPtkKU3GQzsJRk2N0LpZ0l8ZZB1I+Zrq5\n5PPQfcluti8Yl+LMKuTEN6uQE9+sQk58swo58c0q5MQ3q1Ang21GHFnX8vEHHL2qXHprwwJ1Ncta\npJJdC7Jz4BUVBkRtp9SXndxxOF/xzSrkxDerkBPfrEJOfLMKOfHNKuTEN6vQXOfOS8+Pl57rrdBe\nGz2/OtZKh7+uxy5t46DpHni5+QaLu+VCSfcCHcVXfLMKOfHNKuTEN6uQE9+sQk58swo58c0qNNdy\nXnqwzWTvvJJSdaZYBkwes43SW7aTXVFxx65/i+whCz3pynXjwrque+fNlq/4ZhVy4ptVyIlvViEn\nvlmFnPhmFRqb+JLulLQm6emBZWdI2iHpRUkPSDq93TDNbJYmKefdDXwL+PbAshuAnRHxTUnXAzc2\ny4YaXZorlexKxY1CGTBdQst2z8vt10rpraiNSeI6rlcWpAeqLCqV7JJl4/SJyc3fOMrYK35EPAK8\n9Z7FlwD3NI/vAS5dd8tmNjfZz/hnRsQaQEQcBs6cXUhm1rZZ3dx7v4xVYWbkv7K7JmlDRKxJOgt4\no7Txnof2HXvc651Db9NyslkzG2Vl5VVWV16daNtJE1+8+07H/cBVwM3AlcB9pZ23XfDJCZsxs6xe\n7xx6vXOO/fzw3kdHbjtJOe87wI+Bv5D0qqSrgW8An5L0InBR87OZvU+MveJHxBUjVm2fuJWRg22O\nnjuvNPhlK6W3bHPZAUM718ZtmOSokukT08JBS89t8UWY/d2zA8UWBttM/Or+5p5ZhZz4ZhVy4ptV\nyIlvViEnvlmFnPhmFVrcwTbLo1+OpOS8eukxF5NxtqH78mEb5bXk814skxViKY6WWmqx0F6hvpZ+\nuaTjHM5XfLMKOfHNKuTEN6uQE9+sQk58swo58c0q1Ek5LxjRC69U2+h8sM1Sc7Mv2ZU6fhV7W7VQ\nPWynDDj7smq+42XHQ5smX4SlsuOsXxK+4ptVyIlvViEnvlmFnPhmFXLim1XIiW9Wobn2ziv3wCsM\nYpktr6XnsivFkgulJF2SnP1pGbN2cYYTzT4NxddgsvSW7syZ7GEorf/67Su+WYWc+GYVcuKbVciJ\nb1YhJ75ZhSaZO+9OSWuSnh5YdpOkQ5KebP5d3G6YZjZLk5Tz7ga+BXz7PctviYhbpms+1zsvO19d\nuXKTKwhlj5kt2S1Wca3bsmqxteRUdsWBOJPz6mXnwMsPBrv+52HsFT8iHgHeWm8sZra4pvmMf42k\n/ZLukHT6zCIys9ZlE/82YHNEbAEOA1O+5TezLqW+shsRbw78eDvww9L2e/c8euzxcm8jvd45mWbN\nrGBl5TVWV1+baNtJE18MfKaXdFZEHG5+vAx4prTz+du2TtiMmWX1ehvp9TYe+3nfvsdGbjs28SV9\nB9gG/ImkV4GbgAskbQGOACvAF6eK2Mw6NTbxI+KKIYvvXlcribnzsuvKnZ+yJZiCYpzpgxbWJYt9\nbYTZhmRZLl8izM2rV3za06OlZkt9LZTzzOzE48Q3q5AT36xCTnyzCjnxzSrkxDerUDeDbY4oN0Sy\nd14rpb426l0tDAqanZOujXpe8flLlsnysSTLcskelKUJDssDeOb6tpV2y7zMfMU3q5AT36xCTnyz\nCjnxzSrkxDerkBPfrEIdlfNGSA6oSRwprMu1l5buKVg4ZLKmlR1otJ3+ecmegslyV7HMmS3LlVpr\noWRXFIW589w7z8wm4cQ3q5AT36xCTnyzCjnxzSrkxDerUDflvEQZrVzO67rnXmFdtiddsoJW7th2\nAgy2mSyTpTtQtjD4ZVa5CjjbFn3FN6uQE9+sQk58swo58c0q5MQ3q9DYxJe0JGm3pGclHZD05Wb5\nGZJ2SHpR0gOSTm8/XDObhUnKeb8BrouI/ZJOA34qaQdwNbAzIr4p6XrgRuCG9TReLNkVS2EtlPqS\n0r3eSlWr3BHT7XWt0NFszI4ttNfxMcuDZpZ64BWjKa4dZuwVPyIOR8T+5vHbwPPAEnAJcE+z2T3A\npetu3czmYl2f8SX1gC3AY8CGiFiD/h8H4MxZB2dm7Zg48Zu3+d8Hrm2u/O99f7FAbybNrGSir+xK\nOoV+0t8bEfc1i9ckbYiINUlnAW+M2n/v3p8ce7y8vESvt3GKkM1smNXVQ6yuHppo20m/q38X8FxE\n3Dqw7H7gKuBm4ErgviH7AXD++R+fsBkzy1peXmJ5eenYz/v2PT5y27GJL2kr8DnggKSn6L+l/wr9\nhP+epM8Dq8BnpgvbzLoyNvEj4lHg5BGrt882nOklK4TjVuYky4fZMNvouTemjpSTHPwy+xyVn4bS\nnHuzP2flzofZ1+D6nyR/c8+sQk58swo58c0q5MQ3q5AT36xCTnyzCs137rxkD7xsD7XsnHSlWNqo\ndnVdBswfNCk7yV8Lc9JlB9vMyh8xXaceyld8swo58c0q5MQ3q5AT36xCTnyzCjnxzSo053JeYXDB\nZA+nvBZKaCf6oESljm3JQ5ZLksmuidlo0qXFrrs7rp+v+GYVcuKbVciJb1YhJ75ZhZz4ZhVy4ptV\naK7lvGLJLjmDXNfzspUtUDAdV5EW6nR2fcxsnTNZksz8Cr7im1XIiW9WISe+WYWc+GYVcuKbVWhs\n4ktakrRb0rOSDkj6UrP8JkmHJD3Z/Lu4/XDNbBYmKef9BrguIvZLOg34qaQHm3W3RMQtY4+QqTeU\nKiLFSt/olekSU3pOs4I25o9LTvXWtfyYmS10B0wfs9SztI11pVjWb5JJMw8Dh5vHb0t6Hjj7aDyz\nDcfMurCuz/iSesAW4OjE29dI2i/pDkmnzzg2M2vJxN/ca97mfx+4trny3wZ8LSJC0teBW4B/GLbv\n3r0/OfZ4eXmJXm/jdFGb2XFWVg+xunpoom0nSnxJp9BP+nsj4j6AiHhzYJPbgR+O2v/88z8+UTBm\nltdbXqK3vHTs5337Hh+57aRv9e8CnouIW48ukHTWwPrLgGfWF6aZzcvYK76krcDngAOSnqJ/g/gr\nwBWStgBHgBXgiy3GaWYzNMld/UeBk4es+tH0zZd6HOXqeVEovZWLZF0XKJIFtlL3w+Kv0Mb8f8k9\nWzjVpVLYFAdN7lc6ZK6cl69vD+dv7plVyIlvViEnvlmFnPhmFXLim1XIiW9WocUdbLOFnlHlYHK7\npbu9JScHzM7VVyyPpuWOma68lUphxf3SK3OxZNcl55LM8BXfrEJOfLMKOfHNKuTEN6uQE9+sQk58\nswp1Us7LFGGyZTmdNPpvWRTKZCqOVNnCII+lkl2p5FMs9c2+ZNfO1HLZMmAbpdo2SpKzH1CzXAZc\nP1/xzSrkxDerkBPfrEJOfLMKOfHNKuTEN6tQR73zhhcc0iWRwl7ZUlh+8MvcbqUdi2Emj9m993/J\nrnjEbHutzI/nwTbNbAJOfLMKOfHNKuTEN6vQ2MSX9AFJj0t6StKzkv6tWX6GpB2SXpT0gKfJNnv/\nGJv4EfFr4IKI+CjwV8CFzXx6NwA7I+LDwG7gxlYjNbOZmaicFxH/1zz8AP0/Fm8BlwDnN8vvAfbQ\n/2NwnFFliuyghOVediWlHnjFHVuwSLF0LF2xa6GXZNdzJnbeU3C4iT7jSzqpmSn3MLAnIp4DNkTE\nGkBEHAbOXH/zZjYPk17xjwAflfSHwAOStnH8delEv06ZnTDW9c29iPiVpP8C/hpYk7QhItYknQW8\nMWq/PXt+fOxxr7eRXm9jNl4zG2Fl5TVWVg9NtO3YxJf0IeCdiPilpD8APgV8FbgfuAq4GbgSuG/U\nMbZt+9uJgjGzvPdeVB9++LGR205yxf8z4B7177adBNwbEbuaz/zfk/R5YBX4zFRRm1lnxiZ+RBwA\nPjZk+f8C29sIyszaNefeebPvwdVxcaYlJ/p90jbmwMtp5Ux33dHTvfPMbBJOfLMKdZr4Kyuvddlc\nkWMZbpFiObhAsSzSeZlFLPUm/oT1zi44luEWKpaVBYplBufFb/XNKuTEN6uQSj3dZtKAdKLXpswW\nVsTwiR9bT3wzWzx+q29WISe+WYU6S3xJF0t6QdJLkq7vqt0RsaxI+lkzjuB/d9z2nZLWJD09sGwu\n4xeOiOUmSYckPdn8u7iDOJYk7W7GdDwg6cvN8s7Py5BYvtQsn8d5aW+8y4ho/R/9PzD/AywDvwfs\nBz7SRdsj4nkFOGNObX8C2AI8PbDsZuCfm8fXA9+YYyw3Add1fE7OArY0j08DXgQ+Mo/zUoil8/PS\nxHBq8//JwGPA1lmcl66u+OcBL0fEakS8A3yX/ph983K0i3HnIuIR+mMWDrqE/riFNP9fOsdYoOO+\nThFxOCL2N4/fBp4HlpjDeRkRy9nN6s77gMXo8S6nOi9dvfjPBga/tneI353MeQjgQUlPSPrCHOM4\n6sxYrPELr5G0X9IdXQ+bLqlH/13IY8x5XMeBWB5vFnV+Xtoa77LWm3tbI+JjwN8D/yjpE/MO6D3m\nWWO9DdgcEVvov9hu6aphSacB3weuba62cxvXcUgsczkvEXEk+kPbLwGfnNV4l10l/s+BcwZ+XmqW\nzUVEvN78/ybwA/ofReZpTdIGgHHjF7YtIt6M5sMjcDvwN120K+kU+ol2b0QcHcZtLudlWCzzOi9H\nRcSvgHeNd9nEmjovXSX+E8C5kpYl/T5wOf0x+zon6dTmrzmSPgh8Gnim6zB49+fFo+MXwpjxC9uO\npXkhHXUZ3Z2bu4DnIuLWgWXzOi/HxTKP8yLpQ0c/UgyMd/kUszgvHd6dvJj+HdKXgRu6vjs6EMcm\n+lWFp4ADXccCfAf4BfBr4FXgauAMYGdzfnYAfzTHWL4NPN2co/+k/3my7Ti2Ar8deF6ebF4vf9z1\neSnEMo/z8pdN+08BPwP+qVk+9XnxV3bNKlTrzT2zqjnxzSrkxDerkBPfrEJOfLMKOfHNKuTEN6uQ\nE9+sQv8PhW6BNuofxXAAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x112559450>"
+       "<matplotlib.figure.Figure at 0x10c97ddd0>"
       ]
      },
      "metadata": {},
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -320,11 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3073, 10)\n",
-      "(500, 3073)\n",
-      "(1, 10)\n",
-      "(4, 3073)\n",
-      "loss: 9.134384\n"
+      "loss: 9.435529\n"
      ]
     }
    ],
@@ -351,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -360,26 +357,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 7.254806 analytic: 7.254806, relative error: 1.985159e-11\n",
-      "numerical: 9.119119 analytic: 9.119119, relative error: 3.334292e-11\n",
-      "numerical: 9.491349 analytic: 9.491349, relative error: 2.255943e-11\n",
-      "numerical: -13.578557 analytic: -13.578557, relative error: 8.818757e-12\n",
-      "numerical: -20.531207 analytic: -20.531207, relative error: 4.219746e-12\n",
-      "numerical: 4.788282 analytic: 4.788282, relative error: 2.674441e-11\n",
-      "numerical: 26.206285 analytic: 26.206285, relative error: 1.040438e-11\n",
-      "numerical: 11.080018 analytic: 11.080018, relative error: 6.797760e-12\n",
-      "numerical: 1.045237 analytic: 1.045237, relative error: 1.274062e-10\n",
-      "numerical: 21.255656 analytic: 21.255656, relative error: 6.459538e-12\n",
-      "numerical: 6.720399 analytic: 6.720399, relative error: 2.157412e-11\n",
-      "numerical: -41.473874 analytic: -41.473874, relative error: 7.215952e-12\n",
-      "numerical: -1.674707 analytic: -1.674707, relative error: 1.337718e-10\n",
-      "numerical: 11.863070 analytic: 11.863070, relative error: 1.641357e-12\n",
-      "numerical: -32.221122 analytic: -32.221122, relative error: 1.263485e-11\n",
-      "numerical: -3.412592 analytic: -3.412592, relative error: 1.011387e-10\n",
-      "numerical: -18.568300 analytic: -18.568300, relative error: 1.887454e-11\n",
-      "numerical: -3.379757 analytic: -3.379757, relative error: 1.331349e-10\n",
-      "numerical: -3.379056 analytic: -3.379056, relative error: 4.635306e-11\n",
-      "numerical: -23.547120 analytic: -23.547120, relative error: 3.049340e-11\n"
+      "numerical: -40.019434 analytic: -39.976845, relative error: 5.323862e-04\n",
+      "numerical: -21.426735 analytic: -21.426735, relative error: 2.324961e-11\n",
+      "numerical: -4.804283 analytic: -4.804283, relative error: 1.066492e-10\n",
+      "numerical: 4.301772 analytic: 4.301772, relative error: 4.792680e-11\n",
+      "numerical: 13.191162 analytic: 13.249688, relative error: 2.213457e-03\n",
+      "numerical: -0.795577 analytic: -0.795577, relative error: 7.201558e-11\n",
+      "numerical: -38.240562 analytic: -38.240562, relative error: 7.965431e-12\n",
+      "numerical: 8.579014 analytic: 8.579014, relative error: 2.244409e-12\n",
+      "numerical: 24.329154 analytic: 24.329154, relative error: 5.944030e-12\n",
+      "numerical: 5.711244 analytic: 5.711244, relative error: 2.606423e-11\n",
+      "numerical: 34.020006 analytic: 34.020006, relative error: 1.199610e-11\n",
+      "numerical: 5.100671 analytic: 5.100671, relative error: 1.909872e-11\n",
+      "numerical: 7.539986 analytic: 7.539986, relative error: 3.415070e-11\n",
+      "numerical: -3.775363 analytic: -3.775363, relative error: 5.225216e-11\n",
+      "numerical: 1.231188 analytic: 1.231188, relative error: 1.487517e-10\n",
+      "numerical: 28.834409 analytic: 28.834409, relative error: 5.054419e-12\n",
+      "numerical: 18.196414 analytic: 18.120625, relative error: 2.086887e-03\n",
+      "numerical: 0.030307 analytic: 0.030307, relative error: 1.805651e-08\n",
+      "numerical: -10.758714 analytic: -10.758714, relative error: 3.706202e-11\n",
+      "numerical: 5.659692 analytic: 5.659692, relative error: 4.435500e-11\n"
      ]
     }
    ],
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -425,9 +422,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive loss: 9.134384e+00 computed in 0.074510s\n",
-      "Vectorized loss: 9.134384e+00 computed in 0.001734s\n",
-      "difference: 0.000000\n"
+      "Naive loss: 9.435529e+00 computed in 0.071735s\n",
+      "Vectorized loss: 9.435529e+00 computed in 0.005100s\n",
+      "difference: -0.000000\n"
      ]
     }
    ],
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -460,19 +457,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive loss and gradient: computed in 0.073061s\n",
-      "4\n",
-      "[ 1.16836514  0.81711026  0.84908227  1.02120102  1.          1.16137736\n",
-      "  1.04732111  0.81954848  0.97113477  0.87587125]\n",
-      "(500, 10)\n",
-      "[ 1.  1.  1.  1. -9.  1.  1.  1.  1.  1.]\n",
-      "9.0\n",
-      "[ 1.  1.  1.  1. -9.  1.  1.  1.  1.  1.]\n",
-      "(500, 10)\n",
-      "(500, 3073)\n",
-      "(3073, 10)\n",
-      "Vectorized loss and gradient: computed in 0.006003s\n",
-      "difference: 1495856.570602\n"
+      "Naive loss and gradient: computed in 0.069248s\n",
+      "Vectorized loss and gradient: computed in 0.006318s\n",
+      "difference: 0.000000\n"
      ]
     }
    ],
@@ -510,11 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'W' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-226-02066c99d095>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m loss_hist = svm.train(X_train, y_train, learning_rate=1e-7, reg=5e4,\n\u001b[0;32m----> 7\u001b[0;31m                       num_iters=1500, verbose=True)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mtoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'That took %fs'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtoc\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/gauravmenghani/work/cs231n/assignment1/cs231n/classifiers/linear_classifier.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, X, y, learning_rate, reg, num_iters, batch_size, verbose)\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0;31m# Update the weights using the gradient and the learning rate.          #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m       \u001b[0;31m#########################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m       \u001b[0mW\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m       \u001b[0;31m#########################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m       \u001b[0;31m#                       END OF YOUR CODE                                #\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'W' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "# In the file linear_classifier.py, implement SGD in the function\n",
     "# LinearClassifier.train() and then run it with the code below.\n",
