Vectorized gradient for softmax

--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -185,26 +185,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: -0.304822 analytic: -0.304823, relative error: 9.860660e-08\n",
-      "numerical: 0.505478 analytic: 0.505478, relative error: 8.700152e-08\n",
-      "numerical: 3.118966 analytic: 3.118966, relative error: 2.537069e-08\n",
-      "numerical: 0.757935 analytic: 0.757935, relative error: 9.225214e-08\n",
-      "numerical: 2.638838 analytic: 2.638838, relative error: 2.074348e-08\n",
-      "numerical: 0.398974 analytic: 0.398974, relative error: 1.290475e-09\n",
-      "numerical: 1.875489 analytic: 1.875489, relative error: 2.813717e-08\n",
-      "numerical: -1.011983 analytic: -1.011983, relative error: 1.585353e-08\n",
-      "numerical: 0.218865 analytic: 0.218865, relative error: 3.198458e-07\n",
-      "numerical: -0.232134 analytic: -0.232134, relative error: 2.909498e-08\n",
-      "numerical: -0.815513 analytic: -0.815513, relative error: 5.118839e-08\n",
-      "numerical: 0.820549 analytic: 0.820549, relative error: 1.300770e-09\n",
-      "numerical: 2.447135 analytic: 2.447135, relative error: 1.914329e-08\n",
-      "numerical: -1.965898 analytic: -1.965898, relative error: 8.466569e-09\n",
-      "numerical: 2.556700 analytic: 2.556700, relative error: 8.712229e-09\n",
-      "numerical: 2.836089 analytic: 2.836089, relative error: 2.277694e-08\n",
-      "numerical: 0.202792 analytic: 0.202792, relative error: 4.087076e-07\n",
-      "numerical: 0.293248 analytic: 0.293248, relative error: 1.098434e-07\n",
-      "numerical: -1.311912 analytic: -1.311912, relative error: 4.736447e-08\n",
-      "numerical: 1.641548 analytic: 1.641548, relative error: 5.796733e-09\n"
+      "numerical: -2.198640 analytic: -2.198640, relative error: 2.094172e-08\n",
+      "numerical: -0.069549 analytic: -0.069549, relative error: 5.601610e-07\n",
+      "numerical: 1.507237 analytic: 1.507237, relative error: 7.439129e-09\n",
+      "numerical: 0.036608 analytic: 0.036607, relative error: 7.265806e-07\n",
+      "numerical: 0.739360 analytic: 0.739360, relative error: 2.989748e-08\n",
+      "numerical: 0.022468 analytic: 0.022468, relative error: 3.875356e-07\n",
+      "numerical: 3.083734 analytic: 3.083734, relative error: 1.854887e-08\n",
+      "numerical: -0.140043 analytic: -0.140043, relative error: 8.920390e-08\n",
+      "numerical: -4.695596 analytic: -4.695597, relative error: 2.968266e-09\n",
+      "numerical: -3.768801 analytic: -3.768801, relative error: 2.476715e-09\n",
+      "numerical: 0.532535 analytic: 0.532535, relative error: 8.592823e-08\n",
+      "numerical: 2.969496 analytic: 2.969496, relative error: 6.894943e-09\n",
+      "numerical: 1.193155 analytic: 1.193156, relative error: 1.829180e-08\n",
+      "numerical: -1.001546 analytic: -1.001546, relative error: 4.202315e-08\n",
+      "numerical: -1.500830 analytic: -1.500830, relative error: 2.123591e-08\n",
+      "numerical: 0.658386 analytic: 0.658386, relative error: 5.516213e-08\n",
+      "numerical: -5.338740 analytic: -5.338740, relative error: 3.082665e-11\n",
+      "numerical: 0.608348 analytic: 0.608348, relative error: 1.229474e-08\n",
+      "numerical: -0.536660 analytic: -0.536660, relative error: 1.182449e-07\n",
+      "numerical: 1.658319 analytic: 1.658319, relative error: 1.002947e-08\n"
      ]
     }
    ],
@@ -227,11 +227,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.328901e+00 computed in 0.079140s\n",
+      "vectorized loss: 2.328901e+00 computed in 0.004566s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
