--- a/assignment3/RNN_Captioning.ipynb
+++ b/assignment3/RNN_Captioning.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " next_h error:  6.29242142647e-09\n"
+      "next_h error:  6.29242142647e-09\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -237,21 +237,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " dx error:  1.99204719744e-09\n",
-      "dprev_h error:  0.0\n",
-      "dWx error: "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'float' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-5381c12928a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dx error: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdx_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dprev_h error: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdprev_h_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdprev_h\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dWx error: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdWx_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdWx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dWh error: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdWh_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdWh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'db error: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-1-ffcb1586dbdd>\u001b[0m in \u001b[0;36mrel_error\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0;34m\"\"\" returns relative error \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e-8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'NoneType'"
+      "dx error:  1.65488785121e-10\n",
+      "dprev_h error:  2.1856756454e-10\n",
+      "dWx error:  4.29817008563e-10\n",
+      "dWh error:  1.14614463217e-08\n",
+      "db error:  5.61578350046e-09\n"
      ]
     }
    ],
@@ -264,12 +254,6 @@
     "Wx = np.random.randn(D, H)\n",
     "Wh = np.random.randn(H, H)\n",
     "b = np.random.randn(H)\n",
-    "\n",
-    "#x = np.zeros((N, D))\n",
-    "h = np.zeros((N, H))\n",
-    "#Wx = np.zeros((D, H))\n",
-    "Wh = np.zeros((H, H))\n",
-    "#b = np.zeros(H)\n",
     "\n",
     "out, cache = rnn_step_forward(x, h, Wx, Wh, b)\n",
     "\n",
@@ -308,11 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h error:  7.72846618019e-08\n"
+     ]
+    }
+   ],
    "source": [
     "N, T, D, H = 2, 3, 4, 5\n",
     "\n",
@@ -333,6 +325,7 @@
     "    [-0.55857474, -0.39065825, -0.19198182,  0.02378408,  0.23735671],\n",
     "    [-0.27150199, -0.07088804,  0.13562939,  0.33099728,  0.50158768],\n",
     "    [-0.51014825, -0.30524429, -0.06755202,  0.17806392,  0.40333043]]])\n",
+    "\n",
     "print 'h error: ', rel_error(expected_h, h)"
    ]
   },
@@ -346,13 +339,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  2.72502389633e-08\n",
+      "dh0 error:  4.88632119187e-10\n",
+      "dWx error:  3.91078044671e-09\n",
+      "dWh error:  1.2299372542e-09\n",
+      "db error:  1.08260589595e-08\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, T, H = 2, 3, 10, 5\n",
+    "#N, D, T, H = 1, 1, 1, 1\n",
     "\n",
     "x = np.random.randn(N, T, D)\n",
     "h0 = np.random.randn(N, H)\n",
@@ -372,11 +378,13 @@
     "fWh = lambda Wh: rnn_forward(x, h0, Wx, Wh, b)[0]\n",
     "fb = lambda b: rnn_forward(x, h0, Wx, Wh, b)[0]\n",
     "\n",
+    "\n",
     "dx_num = eval_numerical_gradient_array(fx, x, dout)\n",
     "dh0_num = eval_numerical_gradient_array(fh0, h0, dout)\n",
     "dWx_num = eval_numerical_gradient_array(fWx, Wx, dout)\n",
     "dWh_num = eval_numerical_gradient_array(fWh, Wh, dout)\n",
     "db_num = eval_numerical_gradient_array(fb, b, dout)\n",
+    "\n",
     "\n",
     "print 'dx error: ', rel_error(dx_num, dx)\n",
     "print 'dh0 error: ', rel_error(dh0_num, dh0)\n",
